//
//  loopUITests.swift
//  loopUITests
//
//  Created by Yecol Hsu on 03/08/2016.
//  Copyright © 2016 Jingbo. All rights reserved.
//

import XCTest

class loopUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        
        let app = XCUIApplication()
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let tabBarsQuery = XCUIApplication().tabBars
        tabBarsQuery.buttons["Feed"].tap()
        tabBarsQuery.buttons["Discovery"].tap()
        tabBarsQuery.buttons["Message"].tap()
        tabBarsQuery.buttons["Profile"].tap()
    }
    
}
